--- a/fabsebot_core/Cargo.toml
+++ b/fabsebot_core/Cargo.toml
@@ -29,6 +29,7 @@ systemstat = { workspace = true }
 textwrap = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
 tracing = { workspace = true }
+url = { workspace = true }
 uuid = { workspace = true, features = ["v4"] }
 urlencoding = { workspace = true }
 winnow = { workspace = true, features = ["simd"] }
