--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,14 +1,14 @@
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
-rustflags = ["-Ctarget-cpu=native", "-Clink-arg=--ld-path=wild"]
+rustflags = ["-Ctarget-cpu=native", "-Clink-arg=--ld-path=wild", "--cfg", "reqwest_unstable"]
 
 [target.aarch64-unknown-linux-gnu]
 linker = "clang"
-rustflags = ["-Ctarget-cpu=native", "-Clink-arg=--ld-path=wild"]
+rustflags = ["-Ctarget-cpu=native", "-Clink-arg=--ld-path=wild", "--cfg", "reqwest_unstable"]
 
 [target.aarch64-unknown-linux-musl]
 linker = "clang"
-rustflags = ["-Ctarget-cpu=native", "-Clink-arg=--ld-path=wild"]
+rustflags = ["-Ctarget-cpu=native", "-Clink-arg=--ld-path=wild", "--cfg", "reqwest_unstable"]
 
 [build]
 rustc-wrapper = "sccache"
