--- a/fabsebot_commands/Cargo.toml
+++ b/fabsebot_commands/Cargo.toml
@@ -13,7 +13,7 @@ ab_glyph = { workspace = true }
 anyhow = { workspace = true }
 base64 = { workspace = true }
 fastrand = { workspace = true }
-image = { workspace = true, default-features = false, features = ["gif", "rayon", "webp"] }
+image = { workspace = true, default-features = false, features = ["avif", "gif", "nasm", "rayon", "webp"] }
 poise = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
