--- a/fabsebot_core/Cargo.toml
+++ b/fabsebot_core/Cargo.toml
@@ -45,3 +45,4 @@ ignored = ["symphonia"]
 [features]
 simd-avx = ["symphonia/opt-simd-avx"]
 simd-neon = ["symphonia/opt-simd-neon"]
+quote_webp = []
