feat: major refactoring!
Separate functions for static & animated quotes + make use of Rayon's parallel iterators
Combine emoji reaction table with word reaction table + added table for user ids
Lots of code restructering (more constants, exit earlier on unmet conditions, forward errors etc.)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ anyhow = "*"
 base64 = "*"
 bytes = "*"
 criterion = { version = "*", features = ["async_tokio", "html_reports"] }
+emojis = "*"
 fastrand = "*"
 image = { version = "*", default-features = false, features = ["avif", "gif", "nasm", "rayon", "webp"] }
 imageproc = { version = "*", default-features = false, features = ["rayon", "text"] }
