fix: set user-agent in config

--- a/config-example.toml
+++ b/config-example.toml
@@ -38,3 +38,8 @@
 #cloudflare_token_fallback = 
 #cloudflare_image_gen = 
 #cloudflare_image_gen_fallback = 
+
+[HTTP-Agent]
+#title = ""
+#repo = ""
+#email = ""
