fix: clippy lintx + text bounds for quote-command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,11 +39,11 @@ str_to_string = "warn"
 unneeded_field_pattern = "warn"
 verbose_file_reads = "warn"
 use_debug = "warn"
-unwrap_used = "warn"
 unwrap_in_result = "warn"
 unused_trait_names = "warn"
 unused_result_ok = "warn"
 missing_errors_doc = "allow"
+missing_panics_doc = "allow"
 too_many_arguments = "allow"
 too_many_lines = "allow"
 
